onclick notification /cookie/lang/icon/send record

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ APP_NAME=TT
 APP_ENV=local
 APP_KEY=base64:PUoqC1zaysNTHvF0H4R8/LyzbtQb9qWZkvgsJtcuDxQ=
 APP_DEBUG=true
+DEBUGBAR_ENABLED=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
