--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "bootstrap": "^5.1.3",
+        "laravel-echo": "^1.13.1",
+        "laravel-vite-plugin": "^0.5.0",
+        "type": "module"
+
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
@@ -10,9 +15,10 @@
         "bootstrap": "^5.1.3",
         "laravel-echo": "^1.13.1",
         "laravel-vite-plugin": "^0.5.0",
+        "type": "module",
+        "pusher-js": "^7.4.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "pusher-js": "^7.4.0",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
     }
