--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
+        "ladumor/laravel-pwa": "^0.0.3",
         "laravel/framework": "^9.19",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^3.0",
