UPLOUD TO HEROKU

--- a/.env
+++ b/.env
@@ -15,19 +15,19 @@ DB_PORT=3306
 DB_DATABASE=messenger
 DB_USERNAME=root
 DB_PASSWORD=
-
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=google
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36
-# SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36
-
+# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000
+STORE_IN_GOOGLE_DRIVE=true
+envTyping=
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
@@ -62,4 +62,12 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
+
+
+GOOGLE_DRIVE_CLIENT_ID=1015794938517-i97tc3lltovl802glur19brbsdls9827.apps.googleusercontent.com
+GOOGLE_DRIVE_CLIENT_SECRET=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
+GOOGLE_DRIVE_REFRESH_TOKEN=1//04ACr_qhgorPNCgYIARAAGAQSNwF-L9Irt2ijx1bCpA-Xi7tPwTJFrO4M3s-ZM3tS7fOU6ezUDREqJv5j4j5BsxQBXrsk1kfLed8
+GOOGLE_DRIVE_FOLDER_IMAGE=1G9ZlYTqGocVzVF5aTq7KmsckmHJbPHgH
+GOOGLE_DRIVE_FOLDER_ATTACHMENT=1nRd1ulkxC9SwrJYUoCVCH5tlTeZzA91c
+GOOGLE_DRIVE_FOLDER_VOICE_RECORD=10SNyx77KOb8uQV_zf-__Rc5dXIPAqcCH
 
