--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "google/apiclient": "^2.12",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "ladumor/laravel-pwa": "^0.0.3",
@@ -14,6 +15,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "masbug/flysystem-google-drive-ext": "^2.2",
         "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
