--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000
+# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
 SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
 STORE_IN_GOOGLE_DRIVE=true
 envTyping=
