--- a/.env
+++ b/.env
@@ -19,13 +19,13 @@ BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=google
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
 # SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,http://tt-226.herokuapp.com
 STORE_IN_GOOGLE_DRIVE=true
 envTyping=
 REDIS_HOST=127.0.0.1
