--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ SESSION_LIFETIME=120
 MEMCACHED_HOST=127.0.0.1
 
 # SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,http://tt-226.herokuapp.com,192.168.43.72:8000
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,tt-226.herokuapp.com,192.168.43.72:8000
 STORE_IN_GOOGLE_DRIVE=true
 envTyping=
 REDIS_HOST=127.0.0.1
