--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:PUoqC1zaysNTHvF0H4R8/LyzbtQb9qWZkvgsJtcuDxQ=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=false
-APP_URL=http://localhost
+APP_URL=http:127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -20,14 +20,16 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=google
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=1200000
 
-MEMCACHED_HOST=127.0.0.1
+# MEMCACHED_HOST=127.0.0.1
 
 # SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
-SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,tt-226.herokuapp.com,192.168.43.72:8000
+# SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,tt-226.herokuapp.com,192.168.43.72:8000
+# SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
 STORE_IN_GOOGLE_DRIVE=true
-envTyping=
+envTyping=true
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
