enter check vpn to setting instaid of register|add pagination for show messages| merage store voice and store message apis| clean code for messageController | redirect for 404 page when enter random langauage symbole in url | edit readme |

--- a/.env.example
+++ b/.env.example
@@ -18,17 +18,12 @@ DB_PASSWORD=
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=google
-QUEUE_CONNECTION=sync
+# QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=1200000
 
-# MEMCACHED_HOST=127.0.0.1
 
-# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
-# SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,tt-226.herokuapp.com,192.168.43.72:8000
-# SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
-STORE_IN_GOOGLE_DRIVE=true
-envTyping=true
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -73,3 +68,13 @@ GOOGLE_DRIVE_FOLDER_IMAGE=
 GOOGLE_DRIVE_FOLDER_ATTACHMENT=
 GOOGLE_DRIVE_FOLDER_VOICE_RECORD=
 
+
+# MEMCACHED_HOST=127.0.0.1
+
+# SESSION_DOMAIN=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,https://tt-226.herokuapp.com
+# SANCTUM_STATEFUL_DOMAINS=localhost:8000,192.168.1.36:8000,localhost:8000,127.0.0.1:8000,http://192.168.1.36:8000,http://192.168.1.36,192.168.1.36,192.168.1.40:8000,tt-226.herokuapp.com,192.168.43.72:8000
+# SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
+STORE_IN_GOOGLE_DRIVE=true
+envTyping=true
+number_of_message_to_read=10
+FIREBASE_SERVER_API_KEY=
