--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,11 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         port: 22
         script: |
-          cd /var/www/your-laravel-project
+          echo ${{secrets.HOST}}
+          cd /var/www/TT
           git pull origin main
           composer install --no-dev --optimize-autoloader
+          npm run build
           php artisan migrate --force
           php artisan cache:clear
           php artisan config:clear
