--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,4 @@ jobs:
         port: 22
         script: |
           echo ${{secrets.HOST}}
-          cd /var/www/TT
-          git pull origin main
-          composer install --no-dev --optimize-autoloader
-          npm run build
-          php artisan migrate --force
-          php artisan cache:clear
-          php artisan config:clear
+          echo 1
