--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,18 @@ jobs:
         cd ${{ secrets.WORK_DIR }}
         git checkout ${{ secrets.MAIN_BRANCH }}
         git pull
+        composer install --no-dev --optimize-autoloader
+
+        # Set permissions (adjust according to your server configuration)
+        chmod -R 775 storage bootstrap/cache
+        chown -R www-data:www-data storage bootstrap/cache
+
+        npm install
+        npm run build
+        
+        php artisan migrate --force
+
+
         EOF
       shell: bash
       env:
